[MOD] 同步几个工具类